Refactor + Video Player

--- a/PodTube/Client/Editor/Components/AssetDisplay/AssetDisplay.razor
+++ b/PodTube/Client/Editor/Components/AssetDisplay/AssetDisplay.razor
@@ -1,4 +1,5 @@
 ﻿@using PodTube.Shared.Models.Editor;
+@using Orientation = Radzen.Orientation
 <RadzenCard>
     <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Start" Gap="1rem" Class="rz-p-4">
         @if(Value.Url != null) {
