--- a/PodTube/Client/Editor/Components/AssetBrowser/AssetBrowser.razor
+++ b/PodTube/Client/Editor/Components/AssetBrowser/AssetBrowser.razor
@@ -1,4 +1,5 @@
 ﻿@using PodTube.Shared.Models.Editor;
+@using Orientation = Radzen.Orientation
 <RadzenRow>
     <RadzenColumn>
         <RadzenCard>
