--- a/PodTube/Client/Editor/Components/Waveform/WaveformDisplay.razor
+++ b/PodTube/Client/Editor/Components/Waveform/WaveformDisplay.razor
@@ -25,7 +25,7 @@
         await base.OnAfterRenderAsync(firstRender);
         if (firstRender) {
             jsModule = await JS.InvokeAsync<IJSObjectReference>(
-                "import", "./_content/PodTube.Client.Editor/Components/Waveform/WaveformDisplay.razor.js");
+                "import", "./Editor/Components/Waveform/WaveformDisplay.razor.js");
         }
         if (firstRender && Url != null && waveSurferObject == null && jsModule != null) {
             await CreateWaveform();
