--- a/PodTube/Client/Editor/Components/TimelineItemDisplay/TimelineItemDisplay.razor
+++ b/PodTube/Client/Editor/Components/TimelineItemDisplay/TimelineItemDisplay.razor
@@ -1,41 +1,39 @@
 ﻿@using PodTube.Shared.Models.Editor;
 @using Radzen.Blazor.Rendering;
-
-<RadzenCard class="p-0 rz-background-color-info rz-color-on-info rz-text-align-center" Style=@GetStyle() >
-    @if (Value.Asset.IsAudio) {
-        <div class="item-background">
-            <PodTube.Client.Editor.Components.Waveform.WaveformDisplay Url="@Value.Asset.Url" OnWaveformLoaded=OnWaveformLoaded></PodTube.Client.Editor.Components.Waveform.WaveformDisplay>
-        </div>
-    }
-    <div class="item-foreground">
-        <RadzenStack >
-            <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.Start" Gap="1rem" Class="rz-p-4">
-                @if (Value.Asset.IsAudio) {
-                } else {
-                    <RadzenImage Path="@Value.Asset.Url" Style="width: 50px; height: 50px; border-radius: 50%;" />
-                }
-                <RadzenText TextStyle="TextStyle.Body1"><b>@(Value.Asset.Name)</b></RadzenText>
-                <RadzenStack Gap="0">
+<div>
+    <RadzenCard class="p-0 rz-background-color-info rz-color-on-info rz-text-align-center timeline-item" Style=@GetStyle()>
+        @if (Value.Asset.IsAudio) {
+            <PodTube.Client.Editor.Components.Waveform.WaveformDisplay Url="@Value.Asset.Url" OnWaveformLoaded=OnWaveformLoaded style="width: 100%; height: 128px"></PodTube.Client.Editor.Components.Waveform.WaveformDisplay>
+        }
+        <RadzenStack Orientation="Orientation.Horizontal">
+            @if (!Value.Asset.IsAudio) {
+                <RadzenImage Path="@Value.Asset.Url" Style="height: 250px;" />
+            }
+            <RadzenStack Orientation="Orientation.Vertical" JustifyContent="JustifyContent.Start" Gap="1rem" Class="rz-p-4">
+                <RadzenStack JustifyContent="JustifyContent.Start" Gap="0">
+                    <RadzenText TextStyle="TextStyle.Body1" TextAlign="TextAlign.Start"><b>@(Value.Asset.Name)</b></RadzenText>
                     <RadzenText TextStyle="TextStyle.Overline" class="rz-display-flex rz-mt-4 rz-mb-0">Duration</RadzenText>
                     <RadzenText TextStyle="TextStyle.Body1" class="rz-display-flex rz-mt-0"><b>@(GetDuration(Value.Duration))</b></RadzenText>
                 </RadzenStack>
+                <RadzenStack Orientation="Orientation.Horizontal">
+                    @if (DisplayLeftSwap) {
+                        <RadzenButton Click=@(args => OnLeftSwap.InvokeAsync(Value)) Icon="fast_rewind" ButtonStyle="ButtonStyle.Primary" />
+                    }
+                    @if (DisplayChangeDuration) {
+                        <RadzenButton @ref=IncreaseButtonRef Click=@(args => IncreasePopup.ToggleAsync(IncreaseButtonRef.Element)) Icon="add" ButtonStyle="ButtonStyle.Primary" />
+                        <RadzenButton @ref=DecreaseButtonRef Click=@(args => DecreasePopup.ToggleAsync(DecreaseButtonRef.Element)) Icon="remove" ButtonStyle="ButtonStyle.Primary" />
+                    }
+                    @if (DisplayRightSwap) {
+                        <RadzenButton Click=@(args => OnRightSwap.InvokeAsync(Value)) Icon="fast_forward" ButtonStyle="ButtonStyle.Primary" />
+                    }
+                </RadzenStack>
             </RadzenStack>
-            <RadzenStack Orientation="Orientation.Horizontal">
-                @if (DisplayLeftSwap) {
-                    <RadzenButton Click=@(args => OnLeftSwap.InvokeAsync(Value)) Icon="fast_rewind" ButtonStyle="ButtonStyle.Primary" />
-                }
-                @if (DisplayChangeDuration) {
-                    <RadzenButton @ref=IncreaseButtonRef Click=@(args => IncreasePopup.ToggleAsync(IncreaseButtonRef.Element)) Icon="add" ButtonStyle="ButtonStyle.Primary" />
-                    <RadzenButton @ref=DecreaseButtonRef Click=@(args => DecreasePopup.ToggleAsync(DecreaseButtonRef.Element)) Icon="remove" ButtonStyle="ButtonStyle.Primary" />
-                }
-                @if (DisplayRightSwap) {
-                    <RadzenButton Click=@(args => OnRightSwap.InvokeAsync(Value)) Icon="fast_forward" ButtonStyle="ButtonStyle.Primary" />
-                }
-            </RadzenStack>
+
         </RadzenStack>
-    </div>
-    
-</RadzenCard>
+
+    </RadzenCard>
+</div>
+
 
 <Popup @ref=IncreasePopup Lazy=true Style="display:none;position:absolute;background-color:var(--rz-panel-background-color);">
     <PodTube.Client.Editor.Components.TimelineItemDisplay.DurationPopup.DurationPopup OnDone="OnIncreaseDuration" Operation="Add time" />
@@ -68,7 +66,7 @@
     }
 
     public string GetStyle() {
-        return $"width: {TimelineScale * Value.Duration}px; flex-shrink: 0; position:relative; padding: 16px 0px;";
+        return $"width: {TimelineScale * Value.Duration}px;";
     }
 
     public void OnIncreaseDuration(double value) {
