--- a/PodTube/Client/Editor/Components/TimelineItemDisplay/TimelineItemDisplay.razor.css
+++ b/PodTube/Client/Editor/Components/TimelineItemDisplay/TimelineItemDisplay.razor.css
@@ -1,14 +1,7 @@
-.item-background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
+﻿::deep .timeline-item {
+    height: 250px;
+    overflow: hidden;
+    flex-shrink: 0;
+    position: relative;
+    padding: 16px 0px;
 }
-.item-foreground {
-    position: inherit;
-    z-index: 5;
-}
-
-/*# sourceMappingURL=TimelineItemDisplay.razor.css.map */
