--- a/PodTube/Client/Editor/Components/Editor/Editor.razor
+++ b/PodTube/Client/Editor/Components/Editor/Editor.razor
@@ -6,14 +6,15 @@
         <PodTube.Client.Editor.Components.AssetBrowser.AssetBrowser AddAssetToTimeline=AddAssetToTimeline></PodTube.Client.Editor.Components.AssetBrowser.AssetBrowser>
     </RadzenColumn>
     <RadzenColumn>
-        <RadzenCard Style="min-height: 300px">
+        <RadzenCard Style="min-height: 300px; display: flex; flex-direction: column; justify-content: space-between;">
+            <RadzenText TextStyle="TextStyle.Caption">Preview</RadzenText>
             <PodTube.Client.Components.Videos.VideoPlayer.PodTubeVideoPlayer Video="VideoDto"></PodTube.Client.Components.Videos.VideoPlayer.PodTubeVideoPlayer>
         </RadzenCard>
     </RadzenColumn>
 </RadzenRow>
 <RadzenRow>
     <RadzenColumn Size="12">
-         <PodTube.Client.Editor.Components.Timeline.Timeline Value="Timeline" OnTimelineChanged="TimelineChanged"></PodTube.Client.Editor.Components.Timeline.Timeline>
+        <PodTube.Client.Editor.Components.Timeline.Timeline Value="Timeline" OnTimelineChanged="TimelineChanged"></PodTube.Client.Editor.Components.Timeline.Timeline>
     </RadzenColumn>
 </RadzenRow>
 
