--- a/PodTube/Client/Shared/MenuBar.razor
+++ b/PodTube/Client/Shared/MenuBar.razor
@@ -5,6 +5,7 @@
     <MudText Typo="Typo.h5" Class="mx-3">PodTube</MudText>
 </MudButton>
 <MudButton Variant="Variant.Text" Color="Color.Inherit" OnClick="OnChannels">Channels</MudButton>
+<MudButton Variant="Variant.Text" Color="Color.Inherit" OnClick="OnEditor">Editor</MudButton>
 <MudSpacer />
 <UserHolder></UserHolder>
 
@@ -17,4 +18,7 @@
         Navigator.NavigateTo("/channels");
     }
 
+    public void OnEditor() {
+        Navigator.NavigateTo("/editor");
+    }
 }
