--- a/PodTube/Client/Components/Videos/VideoPlayer/PodTubeVideoPlayer.razor
+++ b/PodTube/Client/Components/Videos/VideoPlayer/PodTubeVideoPlayer.razor
@@ -94,6 +94,13 @@
 
     public void OnMetadataLoaded(AudioMetadata metadata) {
         Metadata.TryAdd(metadata.Url, metadata);
+        UpdatePreplay();
+    }
+
+    private void UpdatePreplay() {
+        Duration = CalculateDuration();
+        UpdateFrame();
+        StateHasChanged();
     }
 
 
