--- a/PodTube/Client/Pages/EditorPage.razor
+++ b/PodTube/Client/Pages/EditorPage.razor
@@ -1,5 +1,9 @@
 ﻿@page "/editor"
-<PodTube.Client.Editor.Components.Editor.Editor></PodTube.Client.Editor.Components.Editor.Editor>
+@using PodTube.Client.Components.Shared
+<ShowLoggedIn>
+    <PodTube.Client.Editor.Components.Editor.Editor></PodTube.Client.Editor.Components.Editor.Editor>
+</ShowLoggedIn>
+
 
 @code {
 
